--- a/PicerijaSajt/O Nama/Styles/ONama.css
+++ b/PicerijaSajt/O Nama/Styles/ONama.css
@@ -1,6 +1,6 @@
 body {
     background-color: black;
-    background: url(../../../images/pocetnaSlika.jpg) no-repeat center center fixed; 
+    background: url(../../images/pocetnaSlika.jpg) no-repeat center center fixed; 
     -webkit-background-size: cover;
     -moz-background-size: cover;
     -o-background-size: cover;
